# offeneregister

./: .coveragerc  .env  .envrc  .gitignore  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
data/interim/: gau-algesheim.json  gau-algesheim.jsonl.bz2
docs/: Makefile  conf.py  index.rst  installation.rst  modules.rst  offeneregister.rst  usage.rst
neo4j/conf/: neo4j.conf
offeneregister/: __init__.py  cli.py  jsonl2neo.py
src/offene_register/: __init__.py  jsonl2neo.py  skeleton.py
tests/: conftest.py  test_jsonl2neo.py  test_offeneregister.py  test_read_jsonl.py
tests/data/: 100_de_companies_formatted.jsonl  1st_de_company_formatted.json  5_de_companies.jsonl  5_de_companies.jsonl.bz2
