[tool.poetry]
name = "offeneregister"
version = "0.1.0"
description = "Offene Register with Neo4j"
authors = ["Horst Duchene <monora@gmail.com>"]
license = "MIT"

readme = "README.rst"

repository = "https://github.com/monora/offeneregister"

homepage = "https://monora.github.io/offeneregister"

packages = [
    { include = "offeneregister", from = "."},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.scripts]
import-jsonl = 'offeneregister.cli:main'

[tool.poetry.dependencies]
# List project dependencies here
python = "^3.7"
click = "^7.0"
json_lines = "^0.5.0"
py2neo = "^4.2"

[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
pip = "^19.2"
wheel = "^0.38.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = "^4.4.2"
Sphinx = "^1.8.1"
twine = "^1.12.1"
pytest = "^3.8.2"
pytest-runner = "^4.2"
pytest-cov = "^2.6.0"
setuptools = "^40.5.0"
rstcheck = "^3.3.1"
ptpython = "^2.0.4"
pytest-datadir = "^1.3"
